feat: insert feed
+ 데이터베이스 설계
+ 피드 추가 로직/프론트 페이지
+ 관리자 권한 미들웨어 추가

--- a/frontend/views/partials/navbar.hbs
+++ b/frontend/views/partials/navbar.hbs
@@ -1,14 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar-blur fixed-top">
     <div class="container-fluid px-4">
-        <a class="navbar-brand" href="#!">Blog</a>
+        <a class="navbar-brand" href="/">Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mr-2">
             </ul>
+            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center" id="login_box">
+                <button class="btn btn-white font-weight-md text-dark btn-sm px-3 me-sm-3 btn-rounded" onclick="location.href = '/auth/login'"><i class="fas fa-sign-in-alt"></i></button>
+            </div>
         </div>
     </div>
 </nav>
