--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -12,10 +12,7 @@
                     <div class="text-center my-5">
                         <h2 class="display-5 fw-bolder text-dark font-weight-lg mb-2">더 나은 <b class="font-weight-lg" id="blog_tags">제품을</b> 향해.</h2>
                         <p class="lead text-dark-50 font-weight-md mb-4" id="intro">데벤트 기술 블로그</p>
-                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center" id="login_box">
-                            <button class="btn btn-primary font-weight-md text-light btn-lg px-4 btn-rounded" onclick="location.href = '/auth/signup'"><i class="fas fa-user-plus"></i> 가입</button>
-                            <button class="btn btn-outline-light font-weight-md text-light btn-lg px-4 me-sm-3 btn-rounded" onclick="location.href = '/auth/login'"><i class="fas fa-sign-in-alt"></i> 로그인</button>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -68,15 +65,7 @@
         // Test Ground
 
         //getFeed(1)
-        try {
-            let token = getToken('user')
-            if (checkToken(token)) {
-                document.querySelector("#login_box").innerHTML = `<button class="btn btn-danger font-weight-md text-light btn-lg px-4 btn-rounded" onclick="logout()"><i class="fas fa-user-minus"></i> 로그아웃</button>`
-                document.querySelector("#intro").innerText = '사용자로 로그인 완료'
-            }
-        } catch (error) {
-            
-        }
+
 
         let tag_title = ['세상을', '기술을', '내일을', '우리를', '오늘을', '생각을', '마음을', '지구를']
         let now_title = 0
@@ -91,6 +80,13 @@
             }
 
         }, 2000)
+
+
+
+        async function loadFeeds() {
+            let data = await getFeedRange(0);
+            console.log(data)
+        }
     </script>
 
   </body>
