--- a/frontend/views/user/signup.hbs
+++ b/frontend/views/user/signup.hbs
@@ -11,7 +11,7 @@
               <div class="col-lg-6 col-xl-6 mx-auto h-100">
                 <div class="h-100 flex-row d-flex justify-content-center align-items-center overflow-hidden">
                   <div class="card-body p-4 p-sm-5">
-                    <h5 class="card-title text-center mb-5 fw-light fs-5">프레임 가입</h5>
+                    <h5 class="card-title text-center mb-5 fw-light fs-5">데벤트 블로그 가입</h5>
         
                       <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="Username" placeholder="myusername" required autofocus>
