--- a/frontend/public/css/front.css
+++ b/frontend/public/css/front.css
@@ -31,9 +31,35 @@
 
 .card-title{
     font-family: 'Noto Sans KR', sans-serif;
-
+    font-size: 34px;
+    margin-bottom: 24px;
 }
 
 .form-textarea{
     border: none !important;
+}
+
+.card {
+    box-shadow: none !important;
+}
+
+.card:hover > .card-img-top {
+    box-shadow: 0px 0px 40px rgba(40, 58, 107, 0.116);
+    --webkit-transform:scale(1.02);
+    transform:scale(1.02);
+}
+
+.card-body {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+.card-img-top {
+    border-radius: 24px !important;
+    transition: box-shadow 0.2s ease-in-out;
+
+    --webkit-transform:scale(1);
+    transform:scale(1);
+    --webkit-transition:.3s;
+    transition: .3s;
 }
