--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -10,7 +10,7 @@
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center my-5">
-                        <h2 class="display-5 fw-bolder text-dark font-weight-lg mb-2">더 나은 <b class="font-weight-lg" id="blog_tags">제품을</b> 향해.</h2>
+                        <h2 class="display-5 fw-bolder text-dark font-weight-lg mb-2">더 나은 <b class="font-weight-lg" id="blog_tags">세상을</b> 향해.</h2>
                         <p class="lead text-dark-50 font-weight-md mb-4" id="intro">데벤트 기술 블로그</p>
 
                     </div>
@@ -36,7 +36,9 @@
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                     <h2 class="h4 fw-bolder">피드 </h2>
 
+                    <div id="feeds">
 
+                    </div>
 
 
                     <pre id="logs" style="white-space: pre-wrap;">
@@ -65,7 +67,7 @@
         // Test Ground
 
         //getFeed(1)
-
+loadFeeds() 
 
         let tag_title = ['세상을', '기술을', '내일을', '우리를', '오늘을', '생각을', '마음을', '지구를']
         let now_title = 0
@@ -85,7 +87,19 @@
 
         async function loadFeeds() {
             let data = await getFeedRange(0);
-            console.log(data)
+            let body = document.querySelector("#feeds");
+            
+                        console.log(data)
+
+            data.data.forEach(function(item) {
+                body.insertAdjacentHTML('beforeend', `<div class="card" style="width: 100%;" onclick="location.href='/post/${item.idx}'">
+                    <img class="card-img-top" src="https://cdn.pixabay.com/photo/2021/12/18/06/01/sunset-6878021_1280.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">${item.feed_title}</h5>
+                        <p class="card-text">${item.feed_intro}</p>
+                    </div>
+                    </div>`)
+            })
         }
     </script>
 
