--- a/frontend/views/page/write.hbs
+++ b/frontend/views/page/write.hbs
@@ -25,8 +25,7 @@
         <div class="container-fluid px-5 my-5">
             <div class="row gx-5">
 
-                <div class="col-lg-12">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
+                <div class="col-lg-6">
                     <h2 class="h4 fw-bolder">피드 </h2>
 
                     <div class="mb-3">
@@ -52,6 +51,12 @@
                     <pre id="logs" style="white-space: pre-wrap;">
 
                     </pre>
+                </div>
+
+                <div class="col-lg-6">
+                    <h2 class="h4 fw-bolder">미리보기 </h2>
+
+
                 </div>
             </div>
         </div>
