--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -22,13 +22,13 @@
 
     
     <section class="py-5" id="features">
-        <div class="container-fluid px-5 my-5">
+        <div class="container px-5 my-5">
             <div class="row gx-5">
 
-                <div class="col-lg-12">
+                <div class="col-lg-8 mx-auto">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
 
-                    <div id="feed_body">
+                    <div id="feed_body" class="feed-body">
 
                     </div>
 
@@ -54,7 +54,7 @@
         console.log(data)
         document.querySelector("#feed_title").innerText = data.data[0].feed_title
         document.querySelector("#feed_intro").innerText = data.data[0].feed_intro
-        document.querySelector("#feed_body").innerText = data.data[0].feed_content
+        document.querySelector("#feed_body").innerHTML = await parserMarkdown(data.data[0].feed_content)
 
     }
 </script>
