--- a/frontend/views/page/write.hbs
+++ b/frontend/views/page/write.hbs
@@ -40,7 +40,7 @@
 
                     <div class="mb-3">
                         <b>피드</b>
-                        <textarea class="form-control form-textarea color-gray-100" id="form_content" rows="10"></textarea>
+                        <textarea onkeydown="markdownFeed()" onchange="markdownFeed()" class="form-control form-textarea color-gray-100" id="form_content" rows="10"></textarea>
                     </div>
 
                     <div class="d-grid gap-2">
@@ -56,7 +56,9 @@
                 <div class="col-lg-6">
                     <h2 class="h4 fw-bolder">미리보기 </h2>
 
+                    <div id="feed_body">
 
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,8 +78,33 @@
         let content = document.querySelector("#form_content").value;
         let tags = 'aaa'
         let data = {title, intro, content, tags}
-        await insertSendFeed(data)
+        let result = await insertSendFeed(data)
+
+        if (result.status == 1) {
+            Swal.fire({
+                icon: 'success',
+                title: '정상적으로 게시되었습니다',
+                text: '곧 메인화면으로 리다이렉션 됩니다',
+                showConfirmButton: false,
+                timer: 1500
+            })
+
+            setTimeout(function() {
+                location.href = '/'
+            }, 1700)
+        }
+
+        console.log(result)
     }
+
+    async function markdownFeed() {
+        let content = document.querySelector("#form_content").value;
+        document.querySelector("#feed_body").innerHTML = await parserMarkdown(content)
+
+    }
+
+
+
 </script>
 
   </body>
