--- a/frontend/views/partials/footer.hbs
+++ b/frontend/views/partials/footer.hbs
@@ -21,3 +21,4 @@
 <script src="/js/jwt-token.js"></script>
 <script src="/js/users.js"></script>
 <script src="/js/feeds.js"></script>
+<script src="/js/markdown.js"></script>
