--- a/frontend/public/css/front.css
+++ b/frontend/public/css/front.css
@@ -29,6 +29,18 @@
     font-weight: 500 !important;
 }
 
+.font-size-md {
+    font-size: 18px;
+    font-family: 'Noto Sans KR', sans-serif;
+    word-break: keep-all;
+}
+
+.font-size-sm {
+    font-size: 16px;
+    font-family: 'Noto Sans KR', sans-serif;
+    word-break: keep-all;
+}
+
 .card-title{
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 34px;
@@ -64,6 +76,24 @@
     transition: .3s;
 }
 
+.navbar-toggler {
+    outline: none;
+    border-color: transparent !important;
+}
+
 .feed-body {
     white-space: normal;
+    font-size: 18px;
+}
+
+.img-rounded {
+    border-radius: 24px;
+}
+
+.div-rounded {
+    border-radius: 24px;
+}
+
+.div-hide {
+    display: none;
 }
