--- a/frontend/public/css/front.css
+++ b/frontend/public/css/front.css
@@ -1,3 +1,8 @@
+:root {
+    --borderRadius: 22px;
+    --btnBorderRadius: 12px;
+}
+
 .navbar-blur {
     background-color: #ffffffd5;
     -webkit-backdrop-filter: saturate(100%) blur(20px);
@@ -9,9 +14,12 @@
 }
 
 .btn-rounded {
-    border-radius: 10px;
+    border-radius: var(--btnBorderRadius);
 }
 
+.btn {
+    border-radius: var(--btnBorderRadius) !important;
+}
 
 .font-title {
     font-family: 'Noto Sans KR', sans-serif;
@@ -45,6 +53,7 @@
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 34px;
     margin-bottom: 24px;
+    line-height: 40px;
 }
 
 .form-textarea{
@@ -67,13 +76,23 @@
 }
 
 .card-img-top {
-    border-radius: 24px !important;
+    border-radius: var(--borderRadius) !important;
     transition: box-shadow 0.2s ease-in-out;
 
     --webkit-transform:scale(1);
     transform:scale(1);
     --webkit-transition:.3s;
     transition: .3s;
+
+    width: 100%; 
+    height: 350px; 
+    overflow: hidden;
+}
+
+
+    
+.card-img-top img {
+    margin: -10px 0px 0px -180px;
 }
 
 .navbar-toggler {
@@ -87,11 +106,11 @@
 }
 
 .img-rounded {
-    border-radius: 24px;
+    border-radius: var(--borderRadius);
 }
 
 .div-rounded {
-    border-radius: 24px;
+    border-radius: var(--borderRadius);
 }
 
 .div-hide {
