--- a/frontend/views/page/articles.hbs
+++ b/frontend/views/page/articles.hbs
@@ -11,7 +11,7 @@
                 <div class="col-lg-6">
                     <div class="text-center my-5">
                         <h2 class="display-5 fw-bolder text-dark font-weight-lg mb-2">아티클 <i class="fas fa-caret-right"></i> <b id="article_title"></b></h2>
-                        <p class="text-dark-50 font-size-sm font-weight-sm"><b id="article_intro"></b> author</p>
+                        <p class="text-dark-50 font-size-sm font-weight-sm"><b id="article_intro"></b></p>
 
                     </div>
                 </div>
