--- a/frontend/public/css/front.css
+++ b/frontend/public/css/front.css
@@ -3,6 +3,10 @@
     --btnBorderRadius: 12px;
 }
 
+h2 {
+    word-break: break-all;
+}
+
 .navbar-blur {
     background-color: #ffffffd5;
     -webkit-backdrop-filter: saturate(100%) blur(20px);
@@ -23,30 +27,25 @@
 
 .font-title {
     font-family: 'Noto Sans KR', sans-serif;
-    word-break: keep-all;
 }
 
 .font-weight-lg {
     font-family: 'Noto Sans KR', sans-serif;
-    word-break: keep-all;
     font-weight: 700 !important;
 }
 .font-weight-md {
     font-family: 'Noto Sans KR', sans-serif;
-    word-break: keep-all;
     font-weight: 500 !important;
 }
 
 .font-size-md {
     font-size: 18px;
     font-family: 'Noto Sans KR', sans-serif;
-    word-break: keep-all;
 }
 
 .font-size-sm {
     font-size: 16px;
     font-family: 'Noto Sans KR', sans-serif;
-    word-break: keep-all;
 }
 
 .card-title{
@@ -62,9 +61,11 @@
 
 .card {
     box-shadow: none !important;
+    width: 100%;
+    height: 100%;
 }
 
-.card:hover > .card-img-top {
+.card:hover > .card-img > .card-img-top {
     box-shadow: 0px 0px 40px rgba(40, 58, 107, 0.116);
     --webkit-transform:scale(1.02);
     transform:scale(1.02);
@@ -76,6 +77,11 @@
 }
 
 .card-img-top {
+    position: absolute;
+    left: 0; 
+    right: 0;
+    display: block;
+
     border-radius: var(--borderRadius) !important;
     transition: box-shadow 0.2s ease-in-out;
 
@@ -85,8 +91,27 @@
     transition: .3s;
 
     width: 100%; 
-    height: 350px; 
     overflow: hidden;
+
+}
+
+.card-img-top img{
+    top: 0; 
+    margin: auto;
+
+}
+
+.card-img{
+    position: relative;
+    width: 100%; 
+    height: 300px;
+}
+
+.card-img img{
+    width: 100%; 
+    height: 300px;
+    object-fit: cover; 
+
 }
 
 
