--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -23,7 +23,7 @@
 
 
     
-    <section class="py-5" id="features">
+    <section class="py-5" id="section_features">
 
         <div class="container px-5 my-5">
             <div class="row gx-5">
@@ -45,7 +45,24 @@
         </div>
     </section>
 
+    <section class="py-5" id="section_articles">
 
+        <div class="container px-5 my-5">
+            <div class="row gx-5">
+
+                <div class="col-lg-8 mx-auto">
+
+                    <div class="alert color-blue-100 div-rounded p-5 mb-5">
+                        <b class="text-primary font-weight-sm" id="article_title">아티클 소개</b>
+                        <p class="text-primary font-weight-sm" id="article_intro">아티클 소개</p>
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -71,7 +88,9 @@
 
 
 <script>
-    loadFeed()
+    loadFeed().then(async (data) => {
+        await loadArticle(data.data[0].feed_article)
+    })
     
 
     try {
@@ -88,12 +107,13 @@
         try {
             let idx = window.location.href.split('/')[4]
             let data = await getSendFeed(idx)
+            //let article_data = await loadArticle(data.data[0].feed_article)
             document.querySelector("#feed_title").innerText = data.data[0].feed_title
             document.querySelector("#feed_intro").innerText = data.data[0].feed_intro
             document.querySelector("#feed_date").innerText = await controlFeedDate(data.data[0].feed_date)
             document.querySelector("#feed_owner").innerText = data.data[0].feed_owner
-
             document.querySelector("#feed_body").innerHTML = await parserMarkdown(data.data[0].feed_content)
+            return data
         } catch {
             Swal.fire({
                 icon: 'question',
@@ -133,6 +153,12 @@
                     timer: 1500
                 })
         }
+    }
+
+    async function loadArticle(idx) {
+        let data = await getArticle(idx)
+        document.querySelector("#article_title").innerText = data.data[0].title
+        document.querySelector("#article_intro").innerText = data.data[0].intro
     }
 </script>
 
