feat: select feed article
+ 피드 아티클 지정

--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -52,8 +52,8 @@
 
                 <div class="col-lg-8 mx-auto">
 
-                    <div class="alert color-blue-100 div-rounded p-5 mb-5">
-                        <b class="text-primary font-weight-sm" id="article_title">아티클 소개</b>
+                    <div class="alert color-blue-100 div-rounded p-5 mb-1">
+                        <h3 class="text-primary font-weight-sm mt-2" id="article_title">아티클 소개</h3>
                         <p class="text-primary font-weight-sm" id="article_intro">아티클 소개</p>
 
                     </div>
