--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -43,6 +43,9 @@
 
                     </div>
 
+                    <div class="d-grid gap-2">
+                        <button class="btn color-blue-100 text-primary" onclick="loadMoreFeeds()">더 불러오기</button>
+                    </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
@@ -63,10 +66,10 @@
 
     <script>
         // Test Ground
-
-
-
-
+        let tag_title = ['세상을', '기술을', '내일을', '우리를', '오늘을', '생각을', '마음을', '지구를']
+        let now_title = 0
+        let now_feed_idx = 0
+        let feed_increase = 10;
 
         try {
             let token = getToken('user')
@@ -76,12 +79,10 @@
         } catch (error) {
             
         }
-        //getFeed(1)
         loadFeeds() 
         loadArticles()
 
-        let tag_title = ['세상을', '기술을', '내일을', '우리를', '오늘을', '생각을', '마음을', '지구를']
-        let now_title = 0
+
         setInterval(() => {
             if (tag_title.length > now_title) {
                 document.querySelector("#blog_tags").innerText = tag_title[now_title]
@@ -97,11 +98,10 @@
 
 
         async function loadFeeds() {
-            let data = await getFeedRange(0);
+            console.log(now_feed_idx)
+            let data = await getFeedRange(now_feed_idx);
             let body = document.querySelector("#feeds");
             
-                        console.log(data)
-
             data.data.forEach(function(item) {
                 body.insertAdjacentHTML('beforeend', `<div class="card mb-5 mt-3" style="width: 100%;" onclick="location.href='/post/${item.idx}'">
                     <div class="card-img">
@@ -115,6 +115,14 @@
                     </div>`)
             })
         }
+
+
+        async function loadMoreFeeds() {
+            now_feed_idx = now_feed_idx+feed_increase
+            await loadFeeds() 
+            
+        }
+
 
         async function loadArticles() {
             let data = await getArticles(0)
