feat: get feeds from article
+ 아티클에 포함된 피드 불러오기

--- a/frontend/views/page/articles.hbs
+++ b/frontend/views/page/articles.hbs
@@ -51,7 +51,7 @@
 
 <script>
     loadArticle()
-    
+    loadFeedsArticle()
 
 
     async function loadArticle() {
@@ -76,6 +76,31 @@
             }, 900)
         }
     }
+
+    async function loadFeedsArticle() {
+        try {
+            let idx = window.location.href.split('/')[4]
+            let data = await getFeedsFromArticleIdx(idx)
+
+            let body = document.querySelector("#feed_body");
+            
+            data.data.forEach(function(item) {
+                body.insertAdjacentHTML('beforeend', `<div class="card mb-5 mt-3" style="width: 100%;" onclick="location.href='/post/${item.idx}'">
+                    <div class="card-img">
+                        <img class="card-img-top" src="${item.feed_image}" alt="Card image cap">
+
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">${item.feed_title}</h5>
+                        <p class="card-text">${item.feed_intro}</p>
+                    </div>
+                    </div>`)
+            })
+        } catch {
+
+        }
+    }
+
 
 </script>
 
