--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -2,7 +2,7 @@
 <html lang="ko">
     {{> head}}
   <body>
-    {{> navbar}}
+    {{> navbar text-style-color="text-dark"}}
 
 
     <header class="bg-white py-5">
