--- a/frontend/views/page/write.hbs
+++ b/frontend/views/page/write.hbs
@@ -46,6 +46,8 @@
                     <div class="mb-3">
                         <b>헤더 이미지</b>
                         <textarea class="form-control form-textarea color-gray-100" id="form_image" rows="1">/img/sample.jpg</textarea>
+                        <p>타이틀 텍스트의 정확성을 위해 그레이가 첨가된 이미지나 여러개의 색이 섞인 이미지는 삼가해주세요.</p>
+
                     </div>
 
                     <div class="mb-3">
