--- a/frontend/views/partials/footer.hbs
+++ b/frontend/views/partials/footer.hbs
@@ -22,3 +22,14 @@
 <script src="/js/users.js"></script>
 <script src="/js/feeds.js"></script>
 <script src="/js/markdown.js"></script>
+
+<script>
+    document.addEventListener('scroll', function() {
+        if (document.documentElement.scrollTop > 20) {
+            document.querySelector("#nav").classList.add('blur-active')
+        } else {
+            document.querySelector("#nav").classList.remove('blur-active')
+
+        }
+    });
+</script>
