--- a/frontend/views/partials/navbar.hbs
+++ b/frontend/views/partials/navbar.hbs
@@ -1,12 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light navbar-blur fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light navbar-blur fixed-top" id="nav">
     <div class="container-fluid px-4">
-        <a class="navbar-brand" href="/">Blog</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <a class="navbar-brand font-weight-lg {{text-style-color}}" href="/">Blog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_toggler" aria-controls="navbar_toggler" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="{{text-style-color}} fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar_toggler">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mr-2">
             </ul>
             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center" id="login_box">
-                <button class="btn btn-white font-weight-md text-dark btn-sm px-3 me-sm-3 btn-rounded" onclick="location.href = '/auth/login'"><i class="fas fa-sign-in-alt"></i></button>
+                <button id="login_handle_btn" class="btn font-weight-md {{text-style-color}} btn-sm px-3 me-sm-3 btn-rounded" onclick="location.href = '/auth/login'"><i class="fas fa-sign-in-alt"></i></button>
             </div>
         </div>
     </div>
