--- a/frontend/views/partials/head.hbs
+++ b/frontend/views/partials/head.hbs
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>데벤트 블로그</title>
 
     <!-- CSS Dependencies -->
