--- a/frontend/views/user/login.hbs
+++ b/frontend/views/user/login.hbs
@@ -8,10 +8,10 @@
     <body class="h-100">
         <div class="container h-100 ">
           <div class="row h-100 ">
-            <div class="col-lg-6 col-xl-6 mx-auto h-100">
+            <div class="col-8 col-lg-5 col-xl-4 mx-auto h-100">
               <div class="h-100 flex-row d-flex justify-content-center align-items-center overflow-hidden">
                 <div class="card-body p-4 p-sm-5">
-                  <h4 class="card-title text-center mb-5 fw-light fs-5">데벤트 블로그 로그인</h4>
+                  <h2 class="card-title text-center mb-5 fw-light fs-4">이제 시작해볼까요?</h2>
       
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="Username" placeholder="myusername" required autofocus>
