--- a/frontend/views/user/signup.hbs
+++ b/frontend/views/user/signup.hbs
@@ -8,24 +8,42 @@
       <body class="h-100">
           <div class="container h-100 ">
             <div class="row h-100 ">
-              <div class="col-lg-6 col-xl-6 mx-auto h-100">
+              <div class="col-8 col-lg-5 col-xl-4 mx-auto h-100">
                 <div class="h-100 flex-row d-flex justify-content-center align-items-center overflow-hidden">
                   <div class="card-body p-4 p-sm-5">
-                    <h5 class="card-title text-center mb-5 fw-light fs-5">데벤트 블로그 가입</h5>
+                    <h5 class="card-title text-center mb-5 fw-light fs-4">새로운 계정을 만듭니다</h5>
         
                       <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="Username" placeholder="myusername" required autofocus>
+                        <input type="text" oninput="checkId()" class="form-control" id="Username" placeholder="myusername" required autofocus>
                         <label for="Username">아이디</label>
+                        <div class="valid-feedback">
+                          완벽해요!
+                        </div>
+                        <div class="invalid-feedback">
+                          특수문자는 입력할 수 없어요.
+                        </div>
                       </div>
         
                       <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="Email" placeholder="myusername" required>
+                        <input type="email" oninput="checkEmail()" class="form-control" id="Email" placeholder="myusername" required>
                         <label for="Email">이메일</label>
+                        <div class="valid-feedback">
+                          멋진 이메일이네요!
+                        </div>
+                        <div class="invalid-feedback">
+                          이메일 형식이 맞지 않아요.
+                        </div>
                       </div>
         
                       <div class="form-floating mb-4">
-                        <input type="password" class="form-control" id="Password" placeholder="Password">
+                        <input type="password" oninput="checkPassword()" class="form-control" id="Password" placeholder="Password">
                         <label for="Password">비밀번호</label>
+                        <div class="valid-feedback">
+                          강력한 비밀번호에요!
+                        </div>
+                        <div class="invalid-feedback">
+                          비밀번호는 최소 8글자 이상이어야 해요.
+                        </div>
                       </div>
         
   
@@ -46,6 +64,7 @@
     {{> footer}}
 
     <script src="/js/users.js"></script>
+    <script src="/js/check-users.js"></script>
 
     </body>
   </html>
