chore: add head title
+ 동적 타이틀 설정

--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-    {{> head}}
+    {{> head title="피드"}}
   <body>
     {{> navbar text-style-color="text-dark"}}
 
