--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-    {{> head}}
+    {{> head title="게시글"}}
   <body>
     {{> navbar text-style-color="text-invert "}}
 
