--- a/frontend/public/css/front.css
+++ b/frontend/public/css/front.css
@@ -75,13 +75,6 @@ h2 {
     font-family: 'Noto Sans KR', sans-serif;
 }
 
-.card-title{
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 34px;
-    margin-bottom: 24px;
-    line-height: 40px;
-}
-
 .form-textarea{
     border: none !important;
 }
@@ -101,6 +94,14 @@ h2 {
     box-shadow: none !important;
     width: 100%;
     height: 100%;
+}
+
+
+.card-title{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 24px;
+    margin-bottom: 24px;
+    line-height: 12px;
 }
 
 .card:hover > .card-img > .card-img-top {
@@ -150,12 +151,12 @@ h2 {
 .card-img{
     position: relative;
     width: 100%; 
-    height: 300px;
+    height: 45vh;
 }
 
 .card-img img{
     width: 100%; 
-    height: 300px;
+    height: 45vh;
     object-fit: cover; 
 
 }
@@ -169,6 +170,25 @@ h2 {
 .navbar-toggler {
     outline: none;
     border-color: transparent !important;
+    box-shadow: transparent;
+}
+
+.navbar-toggler > .icon-close {
+    display: none;
+}
+
+
+.navbar-toggler:focus {
+    box-shadow: none !important;
+}
+
+.navbar-toggler:focus > .icon-menu {
+    display: none;
+}
+
+
+.navbar {
+    padding: 0.55rem 1.5rem !important;
 }
 
 .feed-body {
