--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -28,28 +28,26 @@
     <section class="py-3" id="features">
         <div class="container-fluid px-4 my-5">
             <div class="row gx-5">
-                <div class="col-lg-3">
+                <div class="col-lg-3 mb-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <h2 class="h4 fw-bolder">추천 아티클</h2>
-                    <div class="d-grid gap-2 d-md-block" id="articles">
+                    <h2 class="h6 fw-bolder">추천 아티클</h2>
+                    <div id="articles">
 
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 mb-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <h2 class="h4 fw-bolder">피드 </h2>
+                    <h2 class="h6 fw-bolder">피드 </h2>
 
                     <div id="feeds">
 
                     </div>
 
-                    <div class="d-grid gap-2">
-                        <button class="btn color-blue-100 text-primary" onclick="loadMoreFeeds()">더 불러오기</button>
-                    </div>
+
                 </div>
                 <div class="col-lg-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <h2 class="h4 fw-bolder">Featured title</h2>
+                    <h2 class="h6 fw-bolder">모든 태그</h2>
                     <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                     <a class="text-decoration-none" href="#!">
                         Call to action
@@ -131,7 +129,7 @@
 
             data.data.forEach(function(item) {
                 body.insertAdjacentHTML('beforeend', `
-<button class="btn btn-light btn-sm mt-1" onclick="location.href='/articles/${item.idx}'" type="button">${item.title}</button>
+<button class="btn btn-light btn-sm mt-1 mr-1" onclick="location.href='/articles/${item.idx}'" type="button">${item.title}</button>
 `)
             })
             
