--- a/frontend/views/partials/footer.hbs
+++ b/frontend/views/partials/footer.hbs
@@ -26,9 +26,9 @@
 <script>
     document.addEventListener('scroll', function() {
         if (document.documentElement.scrollTop > 20) {
-            document.querySelector("#nav").classList.add('blur-active')
+            document.querySelector("#nav").classList.add('blur-active-base')
         } else {
-            document.querySelector("#nav").classList.remove('blur-active')
+            document.querySelector("#nav").classList.remove('blur-active-base')
 
         }
     });
