--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -31,7 +31,7 @@
                 <div class="col-lg-8 mx-auto">
 
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <div class="alert alert-light div-rounded p-4 mb-5">
+                    <div class="alert alert-dark div-rounded p-4 mb-5">
                         <b class="text-dark-50 font-size-sm font-weight-sm" id="feed_intro">데벤트 기술 블로그</b>
                     </div>
                     <div id="feed_body" class="feed-body">
